--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "ecdsa-0.11.tar.gz": f732f8cdb064bbe47aa830cc2654688da95b78f0
+  ecdsa-0.13.2.tar.gz: 595d82f6ab864df136554486cdfa80e1df1047c0
